Update links in email templates

--- a/views/emailTemplates/message.jade
+++ b/views/emailTemplates/message.jade
@@ -16,4 +16,4 @@ div(style='padding:5px')
     position: relative;\
     color: #383838;')
       | #{message}
-    a(href='#{base_url}/messages', style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;') Send a reply
+    a(href='#{base_url}/transactions', style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;') Send a reply
