--- a/views/emailTemplates/welcome.jade
+++ b/views/emailTemplates/welcome.jade
@@ -6,4 +6,4 @@ div(style='padding:5px; background-color:#f8f8f8')
     img(width='400', src='#{base_url}/images/collage.jpg')
     p(style='font-size:20px;') Glad to have you on board!
     p(style='font-size:20px;') Bazaar is a place where refugees and locals can exchange skills
-    a(href='#{base_url}/account', style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;') Set up your account
+    a(href='#{base_url}/editprofile', style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;') Set up your profile
