Edit about page copy

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -218,6 +218,13 @@ textarea {
   margin-left: 5px;
 }
 
+// About Page
+
+.about-page {
+  h3 {
+    text-transform: uppercase;
+  }
+}
 
 // Community page
 
