--- a/views/emailTemplates/welcome.jade
+++ b/views/emailTemplates/welcome.jade
@@ -5,5 +5,5 @@ div(style='padding:5px; background-color:#f8f8f8')
     h4(style='font-size:18px;') Welcome #{recipient.profile.name},
     img(width='400', src='#{base_url}/images/collage.jpg')
     p(style='font-size:20px;') Glad to have you on board!
-    p(style='font-size:20px;') Bazaar is a place where refugees and locals can exchange skills
+    p(style='font-size:20px;') Bazaar is a place where newcomers and locals can exchange skills
     a(href='#{base_url}/editprofile', style='padding:5px; background-color: #2469a0; color: white; font-weight: bold; border-radius: 3px; text-decoration: none;') Set up your profile
