--- a/views/partials/acceptModal.jade
+++ b/views/partials/acceptModal.jade
@@ -4,7 +4,7 @@
       .modal-header
         button.close(type="button", data-dismiss="modal", aria-label="Close")
           span(aria-hidden="true") &#215;
-        h4#acceptModalLabel.modal-title Confirm acceptance by suggesting a meetup time
+        h4#acceptModalLabel.modal-title Confirm acceptance
       .modal-body
         .checkmark
           svg(width="150", height="120")
