Fix typo in CSS

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -310,7 +310,7 @@ textarea {
   .skill-label.selected, .skill-label:hover {
     color: white;
     background-color: #4a4a4a;
-    curser: pointer;
+    cursor: pointer;
   }
 }
 
