Add twitter link on splash page

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -125,7 +125,7 @@ html
             p Rory
         ul.icons
           li
-            a.icon.fa-twitter(href='#')
+            a.icon.fa-twitter(href='https://www.twitter.com/shareonbazaar')
               span.label Twitter
           li
             a.icon.fa-facebook(href='https://www.facebook.com/shareonbazaar')
