--- a/views/privacy.jade
+++ b/views/privacy.jade
@@ -6,7 +6,7 @@ block content
     h1 Bazaar Privacy Policy
 
     p
-      | This Privacy Policy governs the manner in which Bazaar collects, uses, maintains and discloses information collected from users (each, a "User") of the http://shareonbazaar.eu website ("Site").
+      | This Privacy Policy governs the manner in which Bazaar collects, uses, maintains and discloses information collected from users (each, a "User") of the https://shareonbazaar.eu website ("Site").
     h3 Personal identification information
     p
       | We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, register on the site, and in connection with other activities, services, features or resources we make available on our Site.Users may be asked for, as appropriate, name, email address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.
@@ -44,7 +44,7 @@ block content
     h3 Your acceptance of these terms
     p
       | By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This policy was generated using&nbsp;
-      a(href="http://privacypolicies.com", target="_blank") privacypolicies.com
+      a(href="//privacypolicies.com", target="_blank") privacypolicies.com
     h3 Contacting us
     p
       | If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please&nbsp;
