Force confirmation before deleting account

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1265,6 +1265,9 @@ footer .container {
 
 .account-page {
   width: 90%;
+  #delete-cancel {
+    margin-right: 10px;
+  }
 }
 
 #item1 .question-content {
