--- a/views/account/newaccount.jade
+++ b/views/account/newaccount.jade
@@ -12,7 +12,7 @@ block content
       .item#item1
         .content
           .question-content
-            .question= "Are you a newcomer?"
+            .question= "Which best describes you?"
             .options
               a.nav-link.status(name="refugee" href="#item2") NEWCOMER
               a.nav-link.status(name="native" href="#item2") LOCAL
