--- a/views/contact.jade
+++ b/views/contact.jade
@@ -8,15 +8,15 @@ block content
     form.form-horizontal(method='POST')
       input(type='hidden', name='_csrf', value=_csrf)
       .form-group
-        label(class='col-sm-2 control-label', for='name') Name
+        label(class='col-sm-2 control-label', for='name') Your Name
         .col-sm-8
           input.form-control(type='text', name='name', id='name', autofocus=true)
       .form-group
-        label(class='col-sm-2 control-label', for='email') Email
+        label(class='col-sm-2 control-label', for='email') Your Email
         .col-sm-8
           input.form-control(type='text', name='email', id='email')
       .form-group
-        label(class='col-sm-2 control-label', for='message') Body
+        label(class='col-sm-2 control-label', for='message') Your Message
         .col-sm-8
           textarea.form-control(name='message', id='message', rows='7')
       .form-group
