changed background color and about page text

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -26,7 +26,7 @@ html {
 body {
   padding-top: 60px;
   margin-bottom: 75px;
-  background-color: #f4f4f4;
+  background-color: green;
   font-family: 'Avenir';
 }
 
