--- a/views/about.jade
+++ b/views/about.jade
@@ -5,7 +5,7 @@ block content
     .container
       .row
         .col-md-12
-          h3= "A Place for Empowerement"
+          h3= "A Place to share skills"
           p Our starting point: Both locals and newcomers have skills worth sharing. But they don’t always do so. We wanted to create an easy-to-use platform that enables its users to actively share their capabilities and talents. We support this with our own intelligent matching system and detailed filtering criteria that bring people together and help create a more inclusive society.
       .row
         .col-md-12
