updated contact page
this was fun

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .content-page
     .page-header
-      h3 Contact Form
+      h3 Contact Bazaar
 
     form.form-horizontal(method='POST')
       input(type='hidden', name='_csrf', value=_csrf)
