Add start next button to splash page

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -11,6 +11,7 @@ html
     //if lte IE 8
       script(src='js/ie/html5shiv.js')
     link(rel='stylesheet', href='css/splash.css')
+    link(rel='stylesheet', href='css/start-next.css')
     //if lte IE 8
       link(rel='stylesheet', href='css/ie8.css')
     //if lte IE 9
@@ -51,7 +52,10 @@ html
         a.more.scrolly(href='#zero') Learn More
       // Zero
       section#zero.wrapper.style0.special
+        a.start-next(href='https://www.startnext.com/shareonbazaar?utm_source=startnext&utm_medium=extwidget&utm_campaign=projectbutton&utm_term=projectpromo', title='Share on Bazaar, unterstützen auf Startnext!', target='_blank')
+         span Support project
         .inner
+
           header.major
             h2
               | Bazaar is a place for empowerment
