--- a/views/splash.jade
+++ b/views/splash.jade
@@ -21,7 +21,7 @@ html
       // Header
       header#header.alt
         h1
-          a(href='index.html') Bazaar
+          a(href='/') Bazaar
         nav#nav
           ul
             li.special
