Don't allow user to submit request without selecting skill

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -406,6 +406,12 @@ textarea {
     width: 90%;
   }
 
+  .error-message {
+    color: red;
+    display: none;
+    margin-top: 10px;
+  }
+
   #submit-skill-request {
     width: 90%;
   }
