--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -12,6 +12,7 @@
             .col-xs-4.service-type.selected(name=RequestType.LEARN) Receive
             .col-xs-4.service-type(name=RequestType.SHARE) Give
             .col-xs-4.service-type(name=RequestType.EXCHANGE) Exchange
+        .error-message You must select a skill from this user in order to submit a request
         form.profile-request-form
           #request-recipient(style="display:none;" recipient)
           .form-group
