change the about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,4 +1,4 @@
-extends layout
+﻿extends layout
 
 block content
   .about-page
@@ -9,7 +9,7 @@ block content
           p Our starting point: Both locals and newcomers have skills worth sharing. But they don’t always do so. We wanted to create an easy-to-use platform that enables its users to actively share their capabilities and talents. We support this with our own intelligent matching system and detailed filtering criteria that bring people together and help create a more inclusive society.
       .row
         .col-md-12
-          h3= "What drives us"
+          h3= "What drives to something else"
           h4 There are many stereotypes. 
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 There is no interaction.
