--- a/views/about.jade
+++ b/views/about.jade
@@ -9,32 +9,32 @@ block content
           p Our starting point: Both locals and newcomers have skills worth sharing. But they don’t always do so. We wanted to create an easy-to-use platform that enables its users to actively share their capabilities and talents. We support this with our own intelligent matching system and detailed filtering criteria that bring people together and help create a more inclusive society.
       .row
         .col-md-12
-          h3= "What drives us"
-          h4 There are many stereotypes. 
+          h3= "What Drives Us"
+          h4 Many Stereotypes. 
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
-          h4 There is no interaction.
+          h4 No Interaction.
           p It is difficult for newcomers and locals to get in touch even though they live so close to each other. Then, if there is interaction, it is one-directional help which is not enough in the long term. We want interaction that is easy, natural and on a level where both parties benefit.
-          h4 There are no activities
-          p Newcomers often are not able to demonstrate their capabilities both professionally and academically. That means they can neither train them nor feel valued through contributing. At the same time, they do not have any leisure-time activities to do. We want to change that.
+          h4 No Activities
+          p Newcomers often are not able to demonstrate their capabilities both professionally and academically. That means they can neither develop them nor feel valued through contributing. At the same time, they do not have any leisure-time activities to do. We want to change that.
       .row
         .col-md-12
-          h3= "Our mission"
-          h4 Eye-to-eye exchange
-          p Through giving newcomers the opportunity to not just receive help but actively support others we believe we can create a truly inclusive society.
-          h4 Inclusive communities
-          p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their wellbeing, and create new friendships.
-          h4 Personal enablement
+          h3= "Our Mission"
+          h4 Eye-To-Eye Exchange
+          p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
+          h4 Inclusive Communities
+          p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their well-being, and create new friendships.
+          h4 Personal Enablement
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
       .row
         .col-md-12
-          h3= "Our team"
+          h3= "Our Team"
           p Khaled talks to people.
           p Nina understands the user.
           p Rory develops the tech.
           p Thorben has the numbers.
       .row
         .col-md-12
-          h3= "Get in touch"
+          h3= "Get in Touch"
           a(href='mailto:team@shareonbazaar.eu') team@shareonbazaar.eu
       .row
         .col-md-12
