Centered headings and tested icons

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -214,6 +214,10 @@ textarea {
 .about-page {
   h3 {
     text-transform: uppercase;
+    text-allign: center;
+  }
+  h4{
+    text-allign: center;
   }
 }
 
