--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -213,10 +213,10 @@ textarea {
 
 .about-page {
   h3 {
-    text-transform: uppercase;
+    text-transform: lowercase;
     text-allign: center;
   }
-  h4{
+  h4 {
     text-allign: center;
   }
 }
