--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -213,11 +213,11 @@ textarea {
 
 .about-page {
   h3 {
-    text-transform: lowercase;
-    text-allign: center;
+    text-transform: uppercase;
+    text-align: center;
   }
   h4 {
-    text-allign: center;
+    text-align: center;
   }
 }
 
