--- a/views/about.jade
+++ b/views/about.jade
@@ -10,7 +10,9 @@ block content
       .row
         .col-md-12
           h3= "What Drives Us"
-          h4 img(src='/images/bolt.png')Many Stereotypes. 
+          h4 
+            img(src='/public/images/bolt.png')
+            Many Stereotypes. 
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 No Interaction.
           p It is difficult for newcomers and locals to get in touch even though they live so close to each other. Then, if there is interaction, it is one-directional help which is not enough in the long term. We want interaction that is easy, natural and on a level where both parties benefit.
