Testing image pathname

--- a/views/about.jade
+++ b/views/about.jade
@@ -11,7 +11,7 @@ block content
         .col-md-12
           h3= "What Drives Us"
           h4 
-            img(src='../public/images/bolt.png')
+            img(src='/Users/alannalynch/bazaar/public/images/bolt.png')
             Many Stereotypes. 
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 No Interaction.
