Added bolt icons

--- a/views/about.jade
+++ b/views/about.jade
@@ -21,9 +21,13 @@ block content
       .row
         .col-md-12
           h3= "Our Mission"
-          h4 Eye-To-Eye Exchange
+          h4 
+            img(src='/images/bolt.png' height="20")
+            Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
-          h4 Inclusive Communities
+          h4 
+            img(src='/images/bolt.png' height="20")
+            Inclusive Communities
           p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their well-being, and create new friendships.
           h4 Personal Enablement
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
