Added bolt and heart icons

--- a/views/about.jade
+++ b/views/about.jade
@@ -12,24 +12,30 @@ block content
           h3= "What Drives Us"
           h4 
             img(src='/images/bolt.png' height="20")
-            Many Stereotypes. 
+            Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
-          h4 No Interaction.
+          h4 
+            img(src='/images/bolt.png' height="20")
+            No Interaction.
           p It is difficult for newcomers and locals to get in touch even though they live so close to each other. Then, if there is interaction, it is one-directional help which is not enough in the long term. We want interaction that is easy, natural and on a level where both parties benefit.
-          h4 No Activities
+          h4 
+            img(src='/images/bolt.png' height="20")
+            No Activities
           p Newcomers often are not able to demonstrate their capabilities both professionally and academically. That means they can neither develop them nor feel valued through contributing. At the same time, they do not have any leisure-time activities to do. We want to change that.
       .row
         .col-md-12
           h3= "Our Mission"
           h4 
-            img(src='/images/bolt.png' height="20")
+            img(src='/images/heart.png' height="20")
             Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
           h4 
-            img(src='/images/bolt.png' height="20")
+            img(src='/images/heart.png' height="20")
             Inclusive Communities
           p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their well-being, and create new friendships.
-          h4 Personal Enablement
+          h4 
+            img(src='/images/heart.png' height="20")
+            Personal Enablement
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
       .row
         .col-md-12
