--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -212,6 +212,9 @@ textarea {
 // About Page
 
 .about-page {
+  body {
+    background-color: white;
+  }
   h3 {
     text-transform: uppercase;
     text-align: center;
