Added background color

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -213,7 +213,7 @@ textarea {
 
 .about-page {
   body {
-    background-color: white;
+    background-color: white!important;
   }
   h3 {
     text-transform: uppercase;
