--- a/views/about.jade
+++ b/views/about.jade
@@ -9,13 +9,12 @@ block content
           p Our starting point: Both locals and newcomers have skills worth sharing. But they don’t always do so. We wanted to create an easy-to-use platform that enables its users to actively share their capabilities and talents. We support this with our own intelligent matching system and detailed filtering criteria that bring people together and help create a more inclusive society.
       .row
         .col-md-12
-          img(src="images/mission vertical.png" width= '500px')    
+          img(src="images/mission vertical.png" width= '400px')    
       .row
         .col-md-12
           h3= "What Drives Us"
-          h4 
-            img(src='/images/bolt.png' height="20")
-            Many Stereotypes
+          img(src='/images/bolt.png' height="20")
+          h4 Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 
             img(src='/images/bolt.png' height="20")
