Added Our Friends

--- a/views/about.jade
+++ b/views/about.jade
@@ -43,6 +43,10 @@ block content
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
       .row
         .col-md-12
+          h3="Our Friends"
+          img(src="/images/icons/kukue.png")
+      .row
+        .col-md-12
           h3= "Our Team"
           p Khaled talks to people.
           p Nina understands the user.
