--- a/views/about.jade
+++ b/views/about.jade
@@ -45,6 +45,7 @@ block content
         .col-md-12
           h3="Our Friends"
           img(src="/images/icons/kukue.png" height="100px")
+          img(src="/images/icons/Untitled-4.png" height="100px")
       .row
         .col-md-12
           h3= "Our Team"
