Added sponsors image

--- a/views/about.jade
+++ b/views/about.jade
@@ -44,8 +44,8 @@ block content
       .row
         .col-md-12
           h3="Our Friends"
-          img(src="/images/icons/kukue.png" height="100px")
-          img(src="/images/icons/Untitled-4.jpg" height="100px")
+          img(src="/images/icons/Icons-list.png")
+
       .row
         .col-md-12
           h3= "Our Team"
