--- a/views/about.jade
+++ b/views/about.jade
@@ -44,7 +44,7 @@ block content
       .row
         .col-md-12
           h3="Our Friends"
-          img(src="/images/icons/Icons-list.png")
+          img(src="/images/Icons-list.png")
 
       .row
         .col-md-12
