--- a/views/about.jade
+++ b/views/about.jade
@@ -49,7 +49,7 @@ block content
       .row
         .col-md-12
           h3= "Our Team"
-          img(src="/images/faces.png" width="860px")
+          img(src="/images/faces.png")
           p Khaled talks to people.
           p Nina understands the user.
           p Rory develops the tech.
