--- a/views/about.jade
+++ b/views/about.jade
@@ -30,7 +30,7 @@ block content
         .col-md-12
           h3= "Our Mission"
           h4 
-            img(src='/images/heart.png' height="20")
+            img.icon(src='/images/heart.png' height="20")
             Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
           h4 
