--- a/views/about.jade
+++ b/views/about.jade
@@ -15,7 +15,7 @@ block content
       .row
         .col-md-12
           h3= "What Drives Us"
-          img(src='/images/bolt.png' height="20") 
+          img.icon(src='/images/bolt.png' height="20") 
           h4 Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 
@@ -30,7 +30,7 @@ block content
         .col-md-12
           h3= "Our Mission"
           h4 
-            img.icon(src='/images/heart.png' height="20")
+            img(src='/images/heart.png' height="20")
             Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
           h4 
