--- a/views/about.jade
+++ b/views/about.jade
@@ -15,7 +15,7 @@ block content
       .row
         .col-md-12
           h3= "What Drives Us"
-          img.icon(src='/images/bolt.png' height="20") 
+          img(src='/images/bolt.png' height="20") 
           h4.icon Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           h4 
