--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -224,7 +224,9 @@ textarea {
   }
   .icon {
     display: inline;
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
   }
 }
 
