--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -223,7 +223,7 @@ textarea {
     text-align: center;
   }
   .icon {
-    display: inline;
+    display: block;
     margin-left: auto;
     margin-right: auto
   }
