Centered people image

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -219,6 +219,11 @@ textarea {
     margin-left: auto;
     margin-right: auto
   }
+  .faces{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+  }
   h3 {
     text-transform: uppercase;
     text-align: center;
