--- a/views/about.jade
+++ b/views/about.jade
@@ -48,7 +48,7 @@ block content
       .row
         .col-md-12
           h3= "Our Team"
-          img(src="/images/faces.png" width="560px")
+          img.faces(src="/images/faces.png" width="560px")
           p Khaled talks to people.
           p Nina understands the user.
           p Rory develops the tech.
