--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -219,6 +219,9 @@ textarea {
     margin-left: auto;
     margin-right: auto
   }
+  .title{
+    display: inline;
+  }
   .faces{
     display: block;
     margin-left: auto;
