--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -217,15 +217,17 @@ textarea {
   .mission{
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
   }
   .title{
     display: inline;
+    margin-left: auto;
+    margin-right: auto
   }
   .faces{
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
   }
   h3 {
     text-transform: uppercase;
