--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -222,7 +222,7 @@ textarea {
   .title{
     display: inline;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
   }
   .faces{
     display: block;
@@ -240,7 +240,7 @@ textarea {
   .icon {
     display: inline;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
   }
 }
 
