--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -220,7 +220,7 @@ textarea {
     margin-right: auto;
   }
   .title{
-    display: inline;
+    display: block;
     margin-left: auto;
     margin-right: auto;
   }
