--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -220,9 +220,10 @@ textarea {
     margin-right: auto;
   }
   .title{
-    display: block;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    
   }
   .faces{
     display: block;
