--- a/views/about.jade
+++ b/views/about.jade
@@ -5,7 +5,7 @@ block content
     .container
       .row
         .col-md-12
-          h3= "A Place for Empowerement"
+          h2= "A Place for Empowerment"
           p Our starting point: Both locals and newcomers have skills worth sharing. But they don’t always do so. We wanted to create an easy-to-use platform that enables its users to actively share their capabilities and talents. We support this with our own intelligent matching system and detailed filtering criteria that bring people together and help create a more inclusive society.
       .row
         .col-md-12
@@ -13,42 +13,44 @@ block content
         
       .row
         .col-md-12
-          h3= "What Drives Us"
+          h2= "What Drives Us"
           .title
-            img.icon(src='/images/bolt.png' height="20") 
+            img(src='/images/bolt.png' height="30") 
             h4 Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           .title
-            img(src='/images/bolt.png' height="20")
+            img(src='/images/bolt.png' height="30")
             h4 No Interaction
           p It is difficult for newcomers and locals to get in touch even though they live so close to each other. Then, if there is interaction, it is one-directional help which is not enough in the long term. We want interaction that is easy, natural and on a level where both parties benefit.
-          h4 
-            img(src='/images/bolt.png' height="20")
-            No Activities
+          .title
+            img(src='/images/bolt.png' height="30")
+            h4 No Activities
           p Newcomers often are not able to demonstrate their capabilities both professionally and academically. That means they can neither develop them nor feel valued through contributing. At the same time, they do not have any leisure-time activities to do. We want to change that.
+
+          p _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
       .row
         .col-md-12
-          h3= "Our Mission"
-          h4 
+          h2= "Our Mission"
+          .title 
             img(src='/images/heart.png' height="20")
-            Eye-To-Eye Exchange
+            h4 Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
-          h4 
+          .title 
             img(src='/images/heart.png' height="20")
-            Inclusive Communities
+            h4 Inclusive Communities
           p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their well-being, and create new friendships.
-          h4 
+          .title 
             img(src='/images/heart.png' height="20")
-            Personal Enablement
+            h4 Personal Enablement
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
       .row
         .col-md-12
-          h3="Our Friends"
+          h2="Our Friends"
           img(src="/images/Icons-list.png" width="560px")
 
       .row
         .col-md-12
-          h3= "Our Team"
+          h2= "Our Team"
           img.faces(src="/images/faces.png" width="800px")
           p Khaled talks to people.
           p Nina understands the user.
@@ -56,15 +58,6 @@ block content
           p Thorben has the numbers.
       .row
         .col-md-12
-          h3= "Get in Touch"
+          h2= "Get in Touch"
           a(href='mailto:team@shareonbazaar.eu') team@shareonbazaar.eu
-      .row
-        .col-md-12
-          h3= "How it works"
-          p In three easy steps
-          ol
-            li Sign up and create a profile with your skills and interests.
-            li Browse the community page (by clicking Bazaar) to see your best matches in your vicinity.
-            li Request a 'skillshare' with the person that caught your eye and arrange a time and location in your inbox.
-          p Now all you have to do is to meet up and have a great time!
-
+      
