--- a/views/about.jade
+++ b/views/about.jade
@@ -16,15 +16,15 @@ block content
           h2= "What Drives Us"
           .title
             img(src='/images/bolt.png' height="30") 
-            h4 Many Stereotypes
+            h4  Many Stereotypes
           p People are sceptical of the unknown: A significant number of Europeans are afraid of newcomers - however only a few of them have actually been talking to the new members of our society. We want to create a clearer image and understanding of the people often labeled with the abstract term “refugees”.
           .title
             img(src='/images/bolt.png' height="30")
-            h4 No Interaction
+            h4  No Interaction
           p It is difficult for newcomers and locals to get in touch even though they live so close to each other. Then, if there is interaction, it is one-directional help which is not enough in the long term. We want interaction that is easy, natural and on a level where both parties benefit.
           .title
             img(src='/images/bolt.png' height="30")
-            h4 No Activities
+            h4  No Activities
           p Newcomers often are not able to demonstrate their capabilities both professionally and academically. That means they can neither develop them nor feel valued through contributing. At the same time, they do not have any leisure-time activities to do. We want to change that.
 
           p _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
@@ -33,25 +33,25 @@ block content
           h2= "Our Mission"
           .title 
             img(src='/images/heart.png' height="20")
-            h4 Eye-To-Eye Exchange
+            h4  Eye-To-Eye Exchange
           p By giving newcomers the opportunity to not only receive help but to actively support others we believe we can create a truly inclusive society.
           .title 
             img(src='/images/heart.png' height="20")
-            h4 Inclusive Communities
+            h4  Inclusive Communities
           p By enabling communication between locals and newcomers we aim to enhance the livelihood of both groups, foster their well-being, and create new friendships.
           .title 
             img(src='/images/heart.png' height="20")
-            h4 Personal Enablement
+            h4  Personal Enablement
           p Newcomers are able to continue the work and hobbies they have been carrying out all their life. Because exchanges on Bazaar are measurable and rated, Bazaar is opening doors for their future career.
       .row
         .col-md-12
-          h2="Our Friends"
+          h2.spacing="Our Friends"
           img(src="/images/Icons-list.png" width="560px")
 
       .row
         .col-md-12
-          h2= "Our Team"
-          img.faces(src="/images/faces.png" width="800px")
+          h2.spacing= "Our Team"
+          img.faces(src="/images/faces.png")
           p Khaled talks to people.
           p Nina understands the user.
           p Rory develops the tech.
@@ -60,4 +60,9 @@ block content
         .col-md-12
           h2= "Get in Touch"
           a(href='mailto:team@shareonbazaar.eu') team@shareonbazaar.eu
+      .row
+        .col-md-12
+          p.footer Made with 
+          img(src='/images/heart.png' height="20")
+          p.footer   in Berlin
       
